fix spacing

--- a/client/web/src/repo/tree/TreePageContent.module.scss
+++ b/client/web/src/repo/tree/TreePageContent.module.scss
@@ -32,6 +32,16 @@
     align-self: start;
 }
 
+.contributors-summary {
+    padding: 0.375rem 0.5rem 0.375rem 0.5rem;
+    margin: 0;
+
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    border-top: 1px solid var(--border-color);
+}
+
 .git-commit-node {
     padding: 0.25rem 0;
 
@@ -42,10 +52,4 @@
     :global(.btn) {
         opacity: 0.85;
     }
-}
-
-.commits-summary {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
 }
