--- a/client/web/src/repo/tree/TreePageContentContributors.module.scss
+++ b/client/web/src/repo/tree/TreePageContentContributors.module.scss
@@ -48,5 +48,6 @@
 }
 
 .filtered-connection-summary {
-    padding: 0 0.5rem 0.5rem 0.5rem;
+    border-top: 1px solid var(--border-color);
+    padding: 0;
 }
